--- a/src/view/ApplicationUI.fxml
+++ b/src/view/ApplicationUI.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -50,10 +51,21 @@
                         <Image url="@../images/search-normal.png" />
                      </image>
                   </ImageView>
-                  <TextField prefHeight="26.0" prefWidth="228.0" promptText="Search" />
+                  <TextField prefHeight="26.0" prefWidth="129.0" promptText="Search" />
                   <Button fx:id="btn_search" mnemonicParsing="false" prefHeight="26.0" prefWidth="69.0" styleClass="btn_search" stylesheets="@style.css" text="Search" />
-                  <Pane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
-                  <Button alignment="CENTER" graphicTextGap="10.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="150.0" styleClass="btn_add_application" stylesheets="@style.css" text="Add Application" textFill="WHITE">
+                  <Pane prefHeight="42.0" prefWidth="38.0" />
+                  <HBox alignment="TOP_CENTER" prefHeight="42.0" prefWidth="368.0" spacing="5.0">
+                     <children>
+                        <Label prefHeight="17.0" prefWidth="73.0" text="Job Position:" />
+                        <TextField prefHeight="25.0" prefWidth="123.0" />
+                        <Label layoutX="10.0" layoutY="10.0" prefHeight="17.0" prefWidth="31.0" text="Link:" />
+                        <TextField layoutX="80.0" layoutY="10.0" prefHeight="25.0" prefWidth="124.0" />
+                     </children>
+                     <padding>
+                        <Insets top="3.0" />
+                     </padding>
+                  </HBox>
+                  <Button alignment="CENTER" graphicTextGap="10.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="145.0" styleClass="btn_add_application" stylesheets="@style.css" text="Add Application" textFill="WHITE">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
