--- a/src/view/ApplicationPopWindow.fxml
+++ b/src/view/ApplicationPopWindow.fxml
@@ -6,26 +6,33 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="40.0" layoutY="26.0" prefHeight="24.0" prefWidth="196.0" text="Add a New Job Post">
-         <font>
-            <Font size="19.0" />
-         </font>
-      </Label>
-      <Label layoutX="40.0" layoutY="80.0" text="Job Title" />
-      <TextField layoutX="40.0" layoutY="107.0" prefHeight="26.0" prefWidth="326.0" promptText="Job Title" />
-      <Label layoutX="40.0" layoutY="235.0" text="Date Applied" />
-      <TextField layoutX="40.0" layoutY="183.0" prefHeight="26.0" prefWidth="326.0" promptText="Company Name" />
-      <Label layoutX="40.0" layoutY="157.0" text="Company Name" />
-      <Label layoutX="40.0" layoutY="375.0" text="Status" />
-      <ComboBox fx:id="statusComboBox" layoutX="40.0" layoutY="404.0" prefHeight="26.0" prefWidth="326.0" />
-      <Button fx:id="btnSave" layoutX="294.0" layoutY="542.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="71.0" text="Save Job" />
-      <Button fx:id="btnCancel" layoutX="200.0" layoutY="542.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="71.0" text="Cancel" />
-      <DatePicker layoutX="40.0" layoutY="261.0" prefHeight="26.0" prefWidth="326.0" />
-      <Label layoutX="40.0" layoutY="306.0" text="Job Link" />
-      <TextField layoutX="40.0" layoutY="333.0" prefHeight="26.0" prefWidth="326.0" promptText="Job Link" />
+      <VBox layoutX="35.0" layoutY="40.0" prefHeight="489.0" prefWidth="331.0" spacing="10.0">
+         <children>
+            <Label prefHeight="24.0" prefWidth="196.0" text="Create an application">
+               <font>
+                  <Font name="Apple Braille" size="19.0" />
+               </font>
+            </Label>
+            <Pane prefHeight="18.0" prefWidth="347.0" />
+            <Label text="Job Title" />
+            <TextField prefHeight="26.0" prefWidth="326.0" promptText="Job Title" />
+            <Label text="Company Name" />
+            <TextField prefHeight="26.0" prefWidth="326.0" promptText="Company Name" />
+            <Label text="Status" />
+            <ComboBox fx:id="statusComboBox" prefHeight="26.0" prefWidth="348.0" />
+            <Label text="Date Applied" />
+            <DatePicker prefHeight="26.0" prefWidth="347.0" />
+            <Label text="Job Link" />
+            <TextField prefHeight="26.0" prefWidth="326.0" promptText="Job Link" />
+         </children>
+      </VBox>
+      <Button fx:id="btnSave" layoutX="295.0" layoutY="529.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="71.0" styleClass="btn_add_application" stylesheets="@style.css" text="Save Job" textFill="WHITE" />
+      <Button fx:id="btnCancel" layoutX="201.0" layoutY="529.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="71.0" styleClass="btn_search" stylesheets="@style.css" text="Cancel" />
    </children>
 </AnchorPane>
