--- a/src/view/ApplicationUI.fxml
+++ b/src/view/ApplicationUI.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -31,14 +30,14 @@
           <RowConstraints maxHeight="154.0" minHeight="10.0" prefHeight="154.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TableView prefHeight="260.0" prefWidth="870.0" stylesheets="@style.css" GridPane.rowIndex="1">
+            <TableView fx:id="application_table" prefHeight="260.0" prefWidth="870.0" stylesheets="@style.css" GridPane.rowIndex="1">
               <columns>
-                <TableColumn prefWidth="75.0" text="Job Position" />
-                <TableColumn prefWidth="75.0" text="Company" />
-                  <TableColumn prefWidth="75.0" text="Status" />
-                  <TableColumn prefWidth="75.0" text="Date Added" />
-                  <TableColumn prefWidth="75.0" text="Date Applied" />
-                  <TableColumn prefWidth="75.0" text="Rate" />
+                <TableColumn fx:id="JobPositionColumn" prefWidth="75.0" text="Job" />
+                <TableColumn fx:id="companyColumn" prefWidth="75.0" text="Company" />
+                  <TableColumn fx:id="StatusColumn" prefWidth="75.0" text="Status" />
+                  <TableColumn fx:id="DateAddedColumn" prefWidth="75.0" text="Date Added" />
+                  <TableColumn fx:id="DateAppliedColumn" prefWidth="75.0" text="Date Applied" />
+                  <TableColumn fx:id="RateColumn" prefWidth="75.0" text="Rate" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -51,21 +50,15 @@
                         <Image url="@../images/search-normal.png" />
                      </image>
                   </ImageView>
-                  <TextField prefHeight="26.0" prefWidth="129.0" promptText="Search" />
-                  <Button fx:id="btn_search" mnemonicParsing="false" prefHeight="26.0" prefWidth="69.0" styleClass="btn_search" stylesheets="@style.css" text="Search" />
+                  <TextField fx:id="search_bar" prefHeight="26.0" prefWidth="249.0" promptText="Type a job" />
+                  <Button fx:id="btn_search" mnemonicParsing="false" prefHeight="26.0" prefWidth="66.0" styleClass="btn_search" stylesheets="@style.css" text="Search" />
                   <Pane prefHeight="42.0" prefWidth="38.0" />
-                  <HBox alignment="TOP_CENTER" prefHeight="42.0" prefWidth="368.0" spacing="5.0">
-                     <children>
-                        <Label prefHeight="17.0" prefWidth="73.0" text="Job Position:" />
-                        <TextField prefHeight="25.0" prefWidth="123.0" />
-                        <Label layoutX="10.0" layoutY="10.0" prefHeight="17.0" prefWidth="31.0" text="Link:" />
-                        <TextField layoutX="80.0" layoutY="10.0" prefHeight="25.0" prefWidth="124.0" />
-                     </children>
+                  <HBox alignment="TOP_CENTER" prefHeight="42.0" prefWidth="208.0" spacing="5.0" HBox.hgrow="ALWAYS">
                      <padding>
                         <Insets top="3.0" />
                      </padding>
                   </HBox>
-                  <Button alignment="CENTER" graphicTextGap="10.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="145.0" styleClass="btn_add_application" stylesheets="@style.css" text="Add Application" textFill="WHITE">
+                  <Button fx:id="btn_addApplication" alignment="CENTER" graphicTextGap="10.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="159.0" styleClass="btn_add_application" stylesheets="@style.css" text="Add Application" textFill="WHITE">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
