--- a/src/view/style.css
+++ b/src/view/style.css
@@ -32,6 +32,7 @@
 .table-view {
     -fx-padding: 10px;
     -fx-font-size: 11pt;
+    -fx-background-color: white;
 }
 
 .table-row-cell {
@@ -43,7 +44,6 @@
     -fx-background-color: #EFF0F1;
 }
 
-
 .table-row-cell:selected {
     -fx-background-color: #EFF0F1;
     -fx-text-fill: white;
@@ -51,11 +51,14 @@
 
 .table-column {
     -fx-background-color: #EFF0F1;
+    -fx-pref-width: -1px;
 }
 
 .table-cell {
-    -fx-text-fill: #E8E8E8;
+    -fx-text-fill: black;
     -fx-font-family: "Arial";
+    -fx-font-size: 9px;
+    -fx-alignment: CENTER;
 }
 
 
@@ -64,8 +67,11 @@
 	-fx-background-radius: 12; 
 }
 
+
 .btn_search{
 	-fx-background-color: #E8E8E8;
+	-fx-background-radius: 12; 
+	
 }
 
 .btn_change_status{
