--- a/src/view/ApplicationUI.fxml
+++ b/src/view/ApplicationUI.fxml
@@ -8,11 +8,8 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="870.0" prefWidth="986.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -21,58 +18,47 @@
             <Image url="@../images/avatar.png" />
          </image>
       </ImageView>
-      <GridPane layoutX="70.0" layoutY="158.0" prefHeight="196.0" prefWidth="870.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="94.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="154.0" minHeight="10.0" prefHeight="154.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <HBox alignment="CENTER" layoutX="73.0" layoutY="164.0" prefHeight="31.0" prefWidth="840.0" spacing="20.0">
          <children>
-            <TableView fx:id="application_table" prefHeight="260.0" prefWidth="870.0" stylesheets="@style.css" GridPane.rowIndex="1">
-              <columns>
-                <TableColumn fx:id="JobPositionColumn" prefWidth="75.0" text="Job" />
-                <TableColumn fx:id="companyColumn" prefWidth="75.0" text="Company" />
-                  <TableColumn fx:id="StatusColumn" prefWidth="75.0" text="Status" />
-                  <TableColumn fx:id="DateAddedColumn" prefWidth="75.0" text="Date Added" />
-                  <TableColumn fx:id="DateAppliedColumn" prefWidth="75.0" text="Date Applied" />
-                  <TableColumn fx:id="RateColumn" prefWidth="75.0" text="Rate" />
-              </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
-            <HBox spacing="20.0">
-               <children>
-                  <ImageView fitHeight="25.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/search-normal.png" />
+               </image>
+            </ImageView>
+            <TextField fx:id="search_bar" prefHeight="32.0" prefWidth="249.0" promptText="Type a job" />
+            <Button fx:id="btn_search" mnemonicParsing="false" prefHeight="31.0" prefWidth="99.0" styleClass="btn_search" stylesheets="@style.css" text="Search" />
+            <Pane prefHeight="42.0" prefWidth="38.0" />
+            <HBox alignment="TOP_CENTER" prefHeight="31.0" prefWidth="182.0" spacing="5.0" HBox.hgrow="ALWAYS">
+               <padding>
+                  <Insets top="3.0" />
+               </padding>
+            </HBox>
+            <Button fx:id="btn_addApplication" alignment="CENTER" graphicTextGap="10.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="159.0" styleClass="btn_add_application" stylesheets="@style.css" text="Add Application" textFill="WHITE">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+               <graphic>
+                  <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../images/search-normal.png" />
+                        <Image url="@../images/add.png" />
                      </image>
                   </ImageView>
-                  <TextField fx:id="search_bar" prefHeight="26.0" prefWidth="249.0" promptText="Type a job" />
-                  <Button fx:id="btn_search" mnemonicParsing="false" prefHeight="26.0" prefWidth="66.0" styleClass="btn_search" stylesheets="@style.css" text="Search" />
-                  <Pane prefHeight="42.0" prefWidth="38.0" />
-                  <HBox alignment="TOP_CENTER" prefHeight="42.0" prefWidth="208.0" spacing="5.0" HBox.hgrow="ALWAYS">
-                     <padding>
-                        <Insets top="3.0" />
-                     </padding>
-                  </HBox>
-                  <Button fx:id="btn_addApplication" alignment="CENTER" graphicTextGap="10.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="159.0" styleClass="btn_add_application" stylesheets="@style.css" text="Add Application" textFill="WHITE">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                     <graphic>
-                        <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/add.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-               </children>
-            </HBox>
+               </graphic>
+            </Button>
          </children>
-      </GridPane>
+      </HBox>
+      <TableView fx:id="application_table" layoutX="51.0" layoutY="224.0" onMouseClicked="#openSelectedApplication" prefHeight="610.0" prefWidth="870.0" stylesheets="@style.css">
+        <columns>
+          <TableColumn fx:id="JobPositionColumn" maxWidth="200.0" prefWidth="150.0" text="Job" />
+          <TableColumn fx:id="companyColumn" maxWidth="200.0" prefWidth="150.0" text="Company" />
+            <TableColumn fx:id="StatusColumn" maxWidth="160.0" prefWidth="120.0" text="Status" />
+            <TableColumn fx:id="DateAddedColumn" maxWidth="100.0" prefWidth="100.0" text="Date Added" />
+            <TableColumn fx:id="DateAppliedColumn" maxWidth="100.0" prefWidth="100.0" text="Date Applied" />
+            <TableColumn fx:id="RateColumn" maxWidth="120.0" prefWidth="120.0" text="Rate" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
    </children>
 </AnchorPane>
