--- a/src/view/DashboardUI.fxml
+++ b/src/view/DashboardUI.fxml
@@ -114,7 +114,7 @@
       </VBox>
       <Pane fx:id="mainPane" prefHeight="870.0" prefWidth="986.0">
          <children>
-            <Pane layoutX="7.0" layoutY="6.0" prefHeight="863.0" prefWidth="659.0">
+            <Pane fx:id="middle_pane" layoutX="7.0" layoutY="6.0" prefHeight="863.0" prefWidth="659.0">
                <children>
                   <VBox layoutX="34.0" layoutY="130.0">
                      <children>
