--- a/src/view/ManageApplicationUI.fxml
+++ b/src/view/ManageApplicationUI.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextArea?>
@@ -17,42 +18,59 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="870.0" prefWidth="682.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox layoutX="35.0" layoutY="64.0" prefHeight="108.0" prefWidth="612.0" spacing="10.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="35.0">
+      <VBox layoutX="35.0" layoutY="95.0" prefHeight="108.0" prefWidth="612.0" spacing="10.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="35.0">
          <children>
             <HBox prefHeight="27.0" prefWidth="682.0" spacing="20.0">
                <children>
-                  <Label prefHeight="17.0" prefWidth="432.0" text="Back End Developer">
+                  <Label fx:id="job_title" prefHeight="23.0" prefWidth="668.0">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
                   <Pane prefHeight="46.0" prefWidth="481.0" HBox.hgrow="ALWAYS" />
-                  <ImageView fitHeight="19.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="img_rate" fitHeight="19.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/05%20Rating.png" />
                      </image>
                   </ImageView>
                </children>
             </HBox>
-            <Label text="IBM">
+            <Label fx:id="company_name" prefHeight="18.0" prefWidth="354.0">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <HBox>
+            <HBox spacing="10.0">
                <children>
-                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="95.0" styleClass="btn_add_application" stylesheets="@style.css" text="Apply Link" textFill="WHITE" />
-                  <Pane prefHeight="10.0" prefWidth="367.0" HBox.hgrow="ALWAYS">
-                     <children>
-                        <Button layoutX="6.0" mnemonicParsing="false" style="-fx-background-color: #FF993A;" styleClass="btn_add_application" stylesheets="@style.css" text="Resume" textFill="WHITE" />
-                        <Button layoutX="76.0" mnemonicParsing="false" style="-fx-background-color: #8AC53E;" styleClass="btn_add_application" stylesheets="@style.css" text="Cover Letter" textFill="WHITE" />
-                     </children></Pane>
-                  <ComboBox fx:id="btn_change_status" prefHeight="25.0" prefWidth="129.0" promptText="Applying" styleClass="btn_change_status" stylesheets="@style.css" />
+                  <Button fx:id="apply_link" contentDisplay="CENTER" graphicTextGap="0.0" mnemonicParsing="false" onAction="#openApplyLink" prefHeight="25.0" prefWidth="95.0" styleClass="btn_add_application" stylesheets="@style.css" text="Apply Link" textFill="WHITE">
+                     <graphic>
+                        <Hyperlink />
+                     </graphic></Button>
+                  <Button fx:id="btn_resume" mnemonicParsing="false" onAction="#addResume" prefHeight="26.0" prefWidth="84.0" style="-fx-background-color: #FF993A;" styleClass="btn_add_application" stylesheets="@style.css" text="Resume" textFill="WHITE">
+                     <graphic>
+                        <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/add.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button fx:id="btn_cover_letter" mnemonicParsing="false" onAction="#addCoverLetter" style="-fx-background-color: #8AC53E;" styleClass="btn_add_application" stylesheets="@style.css" text="Cover Letter" textFill="WHITE">
+                     <graphic>
+                        <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/add.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Pane prefHeight="26.0" prefWidth="43.0" HBox.hgrow="ALWAYS" />
+                  <ComboBox fx:id="btn_status" onAction="#ChangeStatus" prefHeight="25.0" prefWidth="129.0" promptText="Applying" styleClass="btn_change_status" stylesheets="@style.css" />
                </children>
             </HBox>
          </children>
       </VBox>
-      <VBox layoutX="35.0" layoutY="192.0" prefHeight="181.0" prefWidth="612.0" spacing="10.0">
+      <VBox layoutX="35.0" layoutY="214.0" prefHeight="181.0" prefWidth="612.0" spacing="10.0">
          <children>
             <Label text="Progress">
                <font>
@@ -61,7 +79,7 @@
             </Label>
             <HBox prefHeight="29.0" prefWidth="612.0">
                <children>
-                  <Label contentDisplay="CENTER" graphicTextGap="0.0" prefHeight="18.0" prefWidth="61.0" text="20%" textAlignment="CENTER">
+                  <Label fx:id="progress_label" contentDisplay="CENTER" graphicTextGap="0.0" prefHeight="18.0" prefWidth="61.0" text="20%" textAlignment="CENTER">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -69,11 +87,11 @@
                   <ProgressBar fx:id="progress_bar" prefHeight="12.0" prefWidth="557.0" progress="0.2" styleClass="progress_bar" stylesheets="@style.css" />
                </children>
             </HBox>
-            <CheckBox layoutX="10.0" layoutY="77.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="621.0" text="Do research of the company" />
-            <CheckBox mnemonicParsing="false" prefHeight="18.0" prefWidth="621.0" text="Tailor resume to job description" />
-            <CheckBox layoutX="10.0" layoutY="59.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="621.0" text="Tailor cover letter to job description" />
-            <CheckBox layoutX="10.0" layoutY="113.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="621.0" text="Submit Application Form" />
-            <CheckBox layoutX="10.0" layoutY="95.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="621.0" text="Connect employees on Linkedin" />
+            <CheckBox fx:id="do_research_checkbox" layoutX="10.0" layoutY="77.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="621.0" text="Do research of the company" />
+            <CheckBox fx:id="tailor_resume_checkbox" mnemonicParsing="false" prefHeight="18.0" prefWidth="621.0" text="Tailor resume to job description" />
+            <CheckBox fx:id="tailore_cover_checkbox" layoutX="10.0" layoutY="59.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="621.0" text="Tailor cover letter to job description" />
+            <CheckBox fx:id="submit_checkbox" layoutX="10.0" layoutY="113.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="621.0" text="Submit Application Form" />
+            <CheckBox fx:id="connect_checkbox" layoutX="10.0" layoutY="95.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="621.0" text="Connect employees on Linkedin" />
          </children>
       </VBox>
       <HBox fx:id="note_pane" layoutX="35.0" layoutY="429.0" prefHeight="386.0" prefWidth="612.0" styleClass="note_pane" stylesheets="@style.css">
@@ -104,7 +122,7 @@
                         <Insets left="10.0" top="10.0" />
                      </padding>
                   </VBox>
-                  <Button fx:id="btn_add_note" alignment="CENTER" layoutX="24.0" layoutY="325.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="141.0" styleClass="btn_add" stylesheets="@style.css" text="New Note" textAlignment="CENTER">
+                  <Button fx:id="btn_add_note" alignment="CENTER" layoutX="24.0" layoutY="325.0" mnemonicParsing="false" onAction="#addNewNote" prefHeight="27.0" prefWidth="141.0" styleClass="btn_add" stylesheets="@style.css" text="New Note" textAlignment="CENTER">
                      <graphic>
                         <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -117,10 +135,19 @@
             </Pane>
             <Pane prefHeight="386.0" prefWidth="433.0">
                <children>
-                  <TextArea layoutX="16.0" layoutY="81.0" prefHeight="285.0" prefWidth="396.0" promptText="note content" />
+                  <TextArea fx:id="note_content" layoutX="16.0" layoutY="81.0" prefHeight="285.0" prefWidth="396.0" promptText="note content" />
                   <Label layoutX="16.0" layoutY="45.0" text="Title:" />
                </children></Pane>
          </children>
       </HBox>
+      <Button fx:id="btn_back" layoutX="35.0" layoutY="27.0" mnemonicParsing="false" onAction="#GoBack" prefHeight="27.0" prefWidth="24.0" style="-fx-background-color: #F5F5F5;;">
+         <graphic>
+            <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/Arrow%20-%20Down%202.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
