--- a/src/view/ManageApplicationUI.fxml
+++ b/src/view/ManageApplicationUI.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -99,29 +99,24 @@
          <children>
             <Pane prefHeight="200.0" prefWidth="200.0" styleClass="statics_pane" stylesheets="@style.css">
                <children>
-                  <VBox layoutX="5.0" layoutY="7.0" prefHeight="285.0" prefWidth="179.0" spacing="10.0">
+                  <VBox alignment="TOP_CENTER" layoutX="11.0" layoutY="8.0" prefHeight="309.0" prefWidth="167.0" spacing="10.0">
                      <children>
-                        <HBox prefHeight="30.0" prefWidth="146.0">
+                        <HBox alignment="CENTER" prefHeight="30.0" prefWidth="140.0">
                            <children>
                               <ImageView fitHeight="28.0" fitWidth="46.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../images/note.png" />
                                  </image>
                               </ImageView>
-                              <Label alignment="CENTER" prefHeight="30.0" prefWidth="143.0" text="My Notes">
+                              <Label alignment="CENTER" graphicTextGap="0.0" prefHeight="30.0" prefWidth="143.0" text="My Notes">
                                  <font>
                                     <Font size="16.0" />
                                  </font>
                               </Label>
                            </children>
                         </HBox>
-                        <Label text="Company Info" />
-                        <Label layoutX="10.0" layoutY="10.0" text="Insights" />
-                        <Label layoutX="10.0" layoutY="10.0" text="Skill match" />
+                        <ListView prefHeight="248.0" prefWidth="166.0" />
                      </children>
-                     <padding>
-                        <Insets left="10.0" top="10.0" />
-                     </padding>
                   </VBox>
                   <Button fx:id="btn_add_note" alignment="CENTER" layoutX="24.0" layoutY="325.0" mnemonicParsing="false" onAction="#addNewNote" prefHeight="27.0" prefWidth="141.0" styleClass="btn_add" stylesheets="@style.css" text="New Note" textAlignment="CENTER">
                      <graphic>
@@ -139,7 +134,7 @@
                   <TextArea fx:id="note_content" layoutX="16.0" layoutY="81.0" prefHeight="242.0" prefWidth="391.0" promptText="Start your note" />
                   <Label layoutX="16.0" layoutY="45.0" text="Title:" />
                   <TextField fx:id="note_title" layoutX="51.0" layoutY="41.0" prefHeight="26.0" prefWidth="354.0" />
-                  <Button layoutX="321.0" layoutY="342.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="84.0" styleClass="btn_add_application" stylesheets="@style.css" text="Save" textFill="WHITE" />
+                  <Button fx:id="btn_save_note" layoutX="321.0" layoutY="342.0" mnemonicParsing="false" onAction="#saveNote" prefHeight="23.0" prefWidth="84.0" styleClass="btn_add_application" stylesheets="@style.css" text="Save" textFill="WHITE" />
                </children></Pane>
          </children>
       </HBox>
