debug dashboard pane switch

--- a/src/view/style.css
+++ b/src/view/style.css
@@ -2,7 +2,8 @@
 	-fx-background-color: #F5F5F5;
 }
 
-.side_anchor_pane{
+
+.navigation{
 	-fx-background-color: #F5F5F5;
 	-fx-border-color: #E8E8E8;
 	-fx-border-width: 0px 3px 0px 0px;
