--- a/src/view/OverviewUI.fxml
+++ b/src/view/OverviewUI.fxml
@@ -19,7 +19,7 @@
          <children>
             <Pane fx:id="middle_pane" layoutX="7.0" layoutY="6.0" prefHeight="863.0" prefWidth="659.0">
                <children>
-                  <Label layoutX="56.0" layoutY="85.0" text="Hello Bruno, welcome back!  👋">
+                  <Label layoutX="56.0" layoutY="85.0" text="Welcome back!  👋">
                      <font>
                         <Font size="16.0" />
                      </font>
@@ -33,12 +33,12 @@
                                     <Image url="@../images/1dayleft.png" />
                                  </image>
                               </ImageView>
-                              <Text fx:id="job_title1" fill="WHITE" layoutX="50.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Job title 1">
+                              <Text fx:id="job_title1" fill="WHITE" layoutX="50.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
                               </Text>
-                              <Text fx:id="company1_name" fill="WHITE" layoutX="50.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Company 1">
+                              <Text fx:id="company1_name" fill="WHITE" layoutX="50.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
@@ -52,12 +52,12 @@
                                     <Image url="@../images/2daysleft.png" />
                                  </image>
                               </ImageView>
-                              <Text fx:id="job_title2" fill="WHITE" layoutX="50.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Job title 2">
+                              <Text fx:id="job_title2" fill="WHITE" layoutX="50.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
                               </Text>
-                              <Text fx:id="company2_name" fill="WHITE" layoutX="50.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Company 2">
+                              <Text fx:id="company2_name" fill="WHITE" layoutX="50.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
@@ -71,12 +71,12 @@
                                     <Image url="@../images/3daysleft.png" />
                                  </image>
                               </ImageView>
-                              <Text fx:id="job_title3" fill="WHITE" layoutX="50.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Job title 3">
+                              <Text fx:id="job_title3" fill="WHITE" layoutX="50.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
                               </Text>
-                              <Text fx:id="company3_name" fill="WHITE" layoutX="50.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Company 3">
+                              <Text fx:id="company3_name" fill="WHITE" layoutX="50.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
@@ -90,12 +90,12 @@
                                     <Image url="@../images/4daysleft.png" />
                                  </image>
                               </ImageView>
-                              <Text fx:id="job_title4" fill="WHITE" layoutX="50.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Job title 4">
+                              <Text fx:id="job_title4" fill="WHITE" layoutX="50.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
                               </Text>
-                              <Text fx:id="company4_name" fill="WHITE" layoutX="50.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Company 4">
+                              <Text fx:id="company4_name" fill="WHITE" layoutX="50.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
@@ -104,6 +104,11 @@
                         </Pane>
                      </children>
                   </VBox>
+                  <Label fx:id="username" layoutX="197.0" layoutY="85.0" text="username">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
                </children>
             </Pane>
             <Pane fx:id="right_side_pane" layoutX="658.0" layoutY="-3.0" prefHeight="879.0" prefWidth="307.0" styleClass="right_side_pane" stylesheets="@style.css">
@@ -141,7 +146,7 @@
                                  </font>
                               </Label>
                               <Line endX="-100.0" endY="36.0" layoutX="121.0" layoutY="74.0" startX="-100.0" startY="8.0" stroke="#369fff" strokeWidth="3.0" />
-                              <Label layoutX="63.0" layoutY="82.0" text="129" textFill="#006ed3">
+                              <Label fx:id="num_applications" layoutX="63.0" layoutY="82.0" text="129" textFill="#006ed3">
                                  <font>
                                     <Font name="System Bold" size="24.0" />
                                  </font>
@@ -161,7 +166,7 @@
                                  </font>
                               </Label>
                               <Line endX="-100.0" endY="36.0" layoutX="121.0" layoutY="74.0" startX="-100.0" startY="8.0" stroke="#369fff" strokeWidth="3.0" />
-                              <Label layoutX="76.0" layoutY="82.0" text="52" textFill="#006ed3">
+                              <Label fx:id="num_companies" layoutX="76.0" layoutY="82.0" text="52" textFill="#006ed3">
                                  <font>
                                     <Font name="System Bold" size="24.0" />
                                  </font>
@@ -181,7 +186,7 @@
                                  </font>
                               </Label>
                               <Line endX="-100.0" endY="36.0" layoutX="121.0" layoutY="74.0" startX="-100.0" startY="8.0" stroke="#369fff" strokeWidth="3.0" />
-                              <Label layoutX="76.0" layoutY="82.0" text="2" textFill="#006ed3">
+                              <Label fx:id="num_offers" layoutX="76.0" layoutY="82.0" text="2" textFill="#006ed3">
                                  <font>
                                     <Font name="System Bold" size="24.0" />
                                  </font>
@@ -201,7 +206,7 @@
                                  </font>
                               </Label>
                               <Line endX="-100.0" endY="36.0" layoutX="121.0" layoutY="74.0" startX="-100.0" startY="8.0" stroke="#369fff" strokeWidth="3.0" />
-                              <Label layoutX="84.0" layoutY="82.0" text="6" textFill="#006ed3">
+                              <Label fx:id="num_interviews" layoutX="84.0" layoutY="82.0" text="6" textFill="#006ed3">
                                  <font>
                                     <Font name="System Bold" size="24.0" />
                                  </font>
